--- a/portage.bib
+++ b/portage.bib
@@ -135,12 +135,17 @@ howpublished = {\url{http://root.cern.ch}} }
 
 @article{cray,
   author = {Colin A. MacLean},
-  title = {{Maintaining Large Software Stacks in a Cray Ecosystem with Gentoo Portage}author},
+  title = {{Maintaining Large Software Stacks in a Cray Ecosystem with Gentoo Portage}},
   year = {2016},
   journal = {Cray User Group}
 }
 
-
+@article{spack,
+  author = {Todd Gamblin, Matthew LeGendre, Michael R. Collette, Gregory L. Lee, Adam Moody, Bronis R. de Supinski, Scott Futral},
+  title = {{The Spack Package Manager: Bringing Order to HPC Software Chaos}},
+  year = {2015},
+  journal = {International Conference for High Performance Computering, Networking, Storage and Analysis}
+}
 
 @TechReport{hsf:package,
   author = 	 {L.~Sexton-Kennedy and B.~Hegner and B.~Viren},
