--- a/portage.bib
+++ b/portage.bib
@@ -141,7 +141,8 @@ howpublished = {\url{http://root.cern.ch}} }
 }
 
 @article{spack,
-  author = {{Todd Gamblin, Matthew LeGendre, Michael R. Collette, Gregory L. Lee, Adam Moody, Bronis R. de Supinski, Scott Futral}},
+  author = {{Todd Gamblin and Matthew LeGendre and Michael R. Collette and
+  Gregory L. Lee and Adam Moody and Bronis R. de Supinski and Scott Futral}},
   title = {{The Spack Package Manager: Bringing Order to HPC Software Chaos}},
   year = {2015},
   journal = {International Conference for High Performance Computering, Networking, Storage and Analysis}
