Fix reference marked with \label rather than \ref

--- a/portage.tex
+++ b/portage.tex
@@ -427,10 +427,10 @@ all the requirements:
   AIX, Mac OS X, Windows and more (Section \ref{sec:portage}).
 \item multiple versions: Portage support for building and installing
   multiple stacks in parallel with the SLOT mechanism
-  (Section \label{sec:ebuild}).
+  (Section \ref{sec:ebuild}).
 \item ease: Portage is self-contained, easy to add new packages by
   ebuild (Section \ref{sec:portage}), and easy to bootstrap on POSIX
-  environments. 
+  environments.
 \item support: The Gentoo community is friendly, active and
   supportive.  Documentaion of Gentoo is abundant and informative.
 \item performance: Gentoo is a Linux distribution famous for keeping
