--- a/portage.tex
+++ b/portage.tex
@@ -28,17 +28,17 @@
 
 \begin{abstract}
 
-Providing users of HPC systems a wide variety of up to date software
+Providing users of HPC systems with a wide variety of up to date software
 packages is a challenging task. Large software stacks built from source
 are difficult to manage, requiring powerful package management tools.
 The Portage package manager from Gentoo is a highly flexible tool that
 offers a mature solution to this otherwise daunting task. The Gentoo
 Prefix project develops and maintains a way of installing Gentoo systems
 in non-standard locations, bringing the virtues of Gentoo to other
-operating systems. Here we shall demonstrate how Gentoo Prefix
-installations can be used to cross compile software packages for the
-Intel® Xeon Phi™, as well as to manage large software stacks in HPC
-environments.
+operating systems. Here we demonstrate how a Gentoo Prefix
+installation can be used to cross compile software packages for the
+Intel® Xeon Phi™ known as Knights Corner, as well as to manage large
+software stacks in HPC environments.
 
 \end{abstract}
 
