Add reference for Xeon Phi patch for libffi

--- a/portage.bib
+++ b/portage.bib
@@ -2,6 +2,10 @@
 % Bibliography
 %
 
+@misc{libffi-k1om,
+title = {{Workaround for compiling libffi for K1OM architecture (Intel® Xeon Phi™)}},
+howpublished = {\url{https://gist.github.com/amadio/6066dabf2b7d98ee73aab28f0dc07bf1}} }
+
 @misc{gentoo,
 title = {{Gentoo Linux}},
 howpublished = {\url{http://www.gentoo.org}} }
